--- a/Notes/sml-bib.bib
+++ b/Notes/sml-bib.bib
@@ -63,3 +63,42 @@
   publisher={Taylor \& Francis}
 }
 
+
+@article{ambrosio2013density,
+  title={Density of Lipschitz functions and equivalence of weak gradients in metric measure spaces},
+  author={Ambrosio, Luigi and Gigli, Nicola and Savar{\'e}, Giuseppe},
+  journal={Revista Matem{\'a}tica Iberoamericana},
+  volume={29},
+  number={3},
+  pages={969--996},
+  year={2013}
+}
+
+
+@book{nesterov2018lectures,
+  title={Lectures on convex optimization},
+  author={Nesterov, Yurii and others},
+  volume={137},
+  year={2018},
+  publisher={Springer}
+}
+
+
+@book{boyd2004convex,
+  title={Convex optimization},
+  author={Boyd, Stephen and Boyd, Stephen P and Vandenberghe, Lieven},
+  year={2004},
+  publisher={Cambridge university press}
+}
+
+
+@article{nesterov2013gradient,
+  title={Gradient methods for minimizing composite functions},
+  author={Nesterov, Yu},
+  journal={Mathematical programming},
+  volume={140},
+  number={1},
+  pages={125--161},
+  year={2013},
+  publisher={Springer}
+}
